--- a/catalog/templates/books/master.html
+++ b/catalog/templates/books/master.html
@@ -9,10 +9,13 @@
 <body>
 <div class="banner">Books</div>
 <div class="menu">
-    <a href="/catalog/books/home">Home</a>
-    <a href="/catalog/books/list">List</a>
-    <a href="/catalog/books/add">Add</a>
-    <a href="/catalog/books/search">Search</a>
+    [<a href="/catalog/books/home">Home</a>]
+    &nbsp;
+    [<a href="/catalog/books/list">List</a>]
+    &nbsp;
+    [<a href="/catalog/books/add">Add</a>]
+    &nbsp;
+    [<a href="/catalog/books/search">Search</a>]
 </div>
 {% block body %}
 {% endblock %}
